--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "dependencies": {
     "@tensorflow/tfjs-node-gpu": "^2.4.0",
     "typescript": "^4.0.2"
+  },
+  "devDependencies": {
+    "@tsconfig/node10": "^1.0.7"
   }
 }
