--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/morozig/abstract-learning#readme",
   "dependencies": {
     "@tensorflow/tfjs-node-gpu": "^2.4.0",
+    "@types/progress": "^2.0.3",
+    "progress": "^2.0.3",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
